kubernetes/catalog/browserless/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: browserless
  namespace: browserless
  labels:
    app.kubernetes.io/name: browserless
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`browserless.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: browserless
          port: 3000
  tls:
    secretName: int-rlservers-com-tls
